# xh-cpu-usage-simulator

./: README.md  pyproject.toml  requirements.txt
src/xh_cpu_usage_simulator/: LinearRegressionPrediction.py  MovingAvg.py  PsMonitor.py  TaskWorker.py  TestMovingAvg.py  __main__.py
