[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "xh-cpu-usage-simulator"
version = "0.0.2"
description = "Tools simulating the cpu usage"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent",]
[[project.authors]]
name = "xethhung"
email = "pypi@xethh.dev"
dependencies = [ "psutil==5.9.5",]

[project.urls]
Homepage = "https://github.com/xh-dev/xh-dict-utils"
"Bug Tracker" = "https://github.com/xh-dev/xh-dict-utils/issues"
